Se añaden mas botones al header

--- a/Frontend/src/app/ui/header/header.component.html
+++ b/Frontend/src/app/ui/header/header.component.html
@@ -1,4 +1,11 @@
+<br>
 <section>
-<button mat-button mat-raised-button color="accent">Gestión de Tokens ERC-20</button>
-<button mat-button mat-raised-button color="warn">Gestión de boletos</button>
+    <div class="container-botones-head">
+        <button mat-button mat-raised-button color="accent">Gestión de Tokens ERC-20</button>
+        <button mat-button mat-raised-button color="warn">Gestión de boletos</button>
+        <button mat-button mat-raised-button color="primary">Premios de lotería</button>
+        <button mat-button mat-raised-button color="blue-linkedin">Linkedin</button>
+        <button mat-button mat-raised-button color="">Instagram</button>
+        <button mat-button mat-raised-button color="">Facebook</button>        
+    </div>
 </section>
