--- a/Frontend/src/app/ui/top-nav/top-nav.component.html
+++ b/Frontend/src/app/ui/top-nav/top-nav.component.html
@@ -1,7 +1,6 @@
-<mat-sidenav-container class="sidenav-container">
-  
+<mat-sidenav-container class="sidenav-container">  
  <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar color="secondary">
       <button
         type="button"
         aria-label="Toggle sidenav"
